[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86.0",
    "generativeai>=0.0.1",
    "google>=3.0.0",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
